# google_scraper

./: CHANGELOG.md  LICENSE  README.md  google_scrapper.py  pyproject.toml  requirements.txt  setup.py  test_scrap_cinema.py  test_scrap_cinema_img.py  test_scrap_theater.py  test_scrap_theater_img.py
data/input/: cinema_paris.csv  theater_paris.csv
data/output/: cinema_paris.csv  theater_paris_with_coordinates.csv
google_scraper/: __init__.py  driver_config.py  scraper.py
google_scraper/utils/: multithread.py  utils.py
google_scrapper/: driver_config.py  google_scrapper.py
src/: __init__.py  driver_config.py  google_scrapper.py
src/google_scraper/: __init__.py  scraper.py
src/google_scraper/utils/: multithread.py  utils.py
src/google_scrapper/: driver_config.py  scrapper.py
src/google_scrapper/utils/: multithread.py
test/: test_scrap_cinema.py  test_scrap_cinema_img.py  test_scrap_showing.py  test_scrap_theater.py  test_scrap_theater_img.py
test/data/input/: cinema_paris.csv
utils/: multithread.py  utils.py
